bindings: Set strong reference from PerformanceObserver to callback

Otherwise the callback can be garbage-collected. This is a tentative
solution until TraceWrapper is fully implemented.

BUG=658030

Review-Url: https://chromiumcodereview.appspot.com/2435263002
Cr-Commit-Position: refs/heads/master@{#426753}

Former-commit-id: cb168398aeefebfb5bf8cb39aa9e82b1d47c7b01